Fix OSD (HD) display overflow on Android

--- a/src/css/tabs/osd.less
+++ b/src/css/tabs/osd.less
@@ -541,7 +541,7 @@ button {
 @media all and (max-width: 575px) {
 	.tab-osd {
 		.osd-preview {
-			min-width: 100%;
+			width: fit-content;
 			order: 1;
 		}
 		.osd-feature {
